NOTES:
   type_attr cannot be 'class'
   opera bug (event.pageY) when dragging and scrolling
   Firefox 2 slows down when too many nested nodes (over 10 levels) (because of floated "a")
   xml_flat in async mode - do not set parent_id
   onopen callback in async mode is fired AFTER the content has loaded and displayed

TODO:
  onselect
  ondeselect

CHANGELOG:
 v.0.9.6 beta (SVN)
   fixed multiselector bug ($(".demo,#demo").tree...)
   rewritten drag events (speed improvements, bug fixes)
   now uses jQuery's native live instead of listen plugin
   beforeopen and beforeclose callbacks added (by starmonkey)
   context menu fix when refreshing (by airbedman)
   can now use Dean Edward's packer (by Hafeyang)
   create bug fixed (by dantan)
   drag_copy bug fixed (by dantan)
   theme background bug fixed (by JensGabe)
 v.0.9.5
   context menu items can be hidden or DISABLED (using the visible function)
   fixed theme including on Mac OS (FF, Safari) (by alvin.schur)
   fixed async JSON bug when server returned empty result (by JensGabe)
   loading icon is now part of the theme
   native context menu (by damir.secki)
   multiple typeO (by JensGabe)
   can now specify attributes for the nested <a> nodes (href, etc) - updated json format
   event optimization (fixed bug where beforemove/copy/etc where called from the origin tree)
   added scroll_spd setting (the speed at which the container scrolls if dragging near the edge)
   fixed scoll while drag & drop
   Safari & Chrome drag & drop fix
   close_all - no animation
   xml_flat and async bug fixed (by Alain)
   can supply id in create function (by ludo)
   more "IE8 compatible" :)
   added support for themes (+2 themes) (by j9850s)
    - in any data type if icon does not contain a "/" it is loaded form the theme folder
   fixed opening leaf nodes (by Limor.Schweitzer)
   dragging bug (by ignoranceisbliss0)
   added search functionality (opens all parents and adds class "search" to results) 